--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos Gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p> TEXTO 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis laborum nulla aut architecto sint perferendis! Ipsam ducimus, maiores, atque sed soluta, similique quasi voluptatibus quo exercitationem iure perspiciatis possimus voluptates.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>TEXTO 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, nisi cum? Totam, vel? Ratione quasi libero quisquam voluptatem voluptas consequatur sapiente vel tempora. Quas corporis eum laudantium porro sed. Cum?</p>
         </article>
     </main>
     
