--- a/index.html
+++ b/index.html
@@ -3,21 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso em Video</title>
+    <title>GTA VI O Grande Lançamento</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <header>
-            <h1>Cursos Gratis</h1>
+            <h1>GTA VI</h1>
         </header>
         <article>
-            <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis laborum nulla aut architecto sint perferendis! Ipsam ducimus, maiores, atque sed soluta, similique quasi voluptatibus quo exercitationem iure perspiciatis possimus voluptates.</p>
+            <h2>O que é?</h2>
+            <p>O Grand Theft Auto VI (GTA 6) é o próximo jogo da aclamada série de ação e aventura da Rockstar Games. O jogo está programado para ser lançado em 26 de maio de 2026 para PlayStation 5 e Xbox Series X/S, com uma versão para PC a ser lançada posteriormente. O jogo trará de volta a cidade de Vice City e o estado de Leonida, com dois protagonistas, Lucia e Jason, um casal de criminosos à la Bonnie & Clyde.</p>
         </article>
         <article>
-            <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, nisi cum? Totam, vel? Ratione quasi libero quisquam voluptatem voluptas consequatur sapiente vel tempora. Quas corporis eum laudantium porro sed. Cum?</p>
+            <h2>Enredo e Protagonistas</h2>
+            <p> GTA 6 segue a história de Lucia e Jason, dois criminosos que se envolvem em uma conspiração que se estende por todo o estado de Leonida.
+A dupla, tendo tudo contra eles, precisa confiar um no outro para sobreviver e sair dessa situação.
+A narrativa parece inspirada no casal Bonnie & Clyde, com foco em roubos e crimes. 
+</p>
+        </article>
+        <article>
+            <h3>Cenário e Ambientação</h3>
+            <p>O jogo se passa no estado de Leonida, uma versão fictícia da Flórida, com destaque para Vice City, uma cidade icônica da franquia. 
+A ambientação remete ao mundo moderno, com referências à cultura pop e redes sociais, como o Instagram e o TikTok. 
+Haverá uma variedade de tipos de corpos e personagens, com foco no realismo e na diversidade, segundo a Forbes. </p>
+        </article>
+        <article>
+            <h4>Kançamento</h4>
+            <p>O lançamento do GTA 6 foi adiado para 26 de maio de 2026, após um anúncio da Rockstar Games. 
+A Rockstar Games justifica o adiamento para garantir a qualidade e a experiência que os jogadores esperam. 
+Há grande expectativa em torno do jogo, com previsões de que seja um dos maiores lançamentos da história dos videogames. 
+Um analista da Konvoy Ventures prevê que o jogo pode faturar US$ 7,6 bilhões em apenas dois meses após o lançamento, segundo a Adrenaline. </p>
         </article>
     </main>
     
