--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ A ambientação remete ao mundo moderno, com referências à cultura pop e redes
 Haverá uma variedade de tipos de corpos e personagens, com foco no realismo e na diversidade, segundo a Forbes. </p>
         </article>
         <article>
-            <h4>Kançamento</h4>
+            <h4>Lançamento</h4>
             <p>O lançamento do GTA 6 foi adiado para 26 de maio de 2026, após um anúncio da Rockstar Games. 
 A Rockstar Games justifica o adiamento para garantir a qualidade e a experiência que os jogadores esperam. 
 Há grande expectativa em torno do jogo, com previsões de que seja um dos maiores lançamentos da história dos videogames. 
