--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <header>
             <h1>GTA VI</h1>
+            <img src="https://upload.wikimedia.org/wikipedia/pt/4/46/Grand_Theft_Auto_VI.png">
         </header>
         <article>
             <h2>O que é?</h2>
