--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@ Haverá uma variedade de tipos de corpos e personagens, com foco no realismo e n
 A Rockstar Games justifica o adiamento para garantir a qualidade e a experiência que os jogadores esperam. 
 Há grande expectativa em torno do jogo, com previsões de que seja um dos maiores lançamentos da história dos videogames. 
 Um analista da Konvoy Ventures prevê que o jogo pode faturar US$ 7,6 bilhões em apenas dois meses após o lançamento, segundo a Adrenaline. </p>
+           <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Rockstar_Games_Logo.svg">
         </article>
     </main>
+
     
 </body>
 </html>
