--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <header>
             <h1>GTA VI</h1>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Rockstar_Games_Logo.svg" id="Rockstar">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Rockstar_Games_Logo.svg" id="Rockstar" alt="Rockstar Games">
         </header>
         <article>
             <h2>O que é?</h2>
