--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <header>
             <h1>GTA VI</h1>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Rockstar_Games_Logo.svg" id="Rockstar" alt="Rockstar Games">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Rockstar_Games_Logo.svg" id="Rockstar">
         </header>
         <article>
             <h2>O que é?</h2>
@@ -39,6 +39,7 @@ A Rockstar Games justifica o adiamento para garantir a qualidade e a experiênci
 Há grande expectativa em torno do jogo, com previsões de que seja um dos maiores lançamentos da história dos videogames. 
 Um analista da Konvoy Ventures prevê que o jogo pode faturar US$ 7,6 bilhões em apenas dois meses após o lançamento, segundo a Adrenaline. </p>
            <img src="https://upload.wikimedia.org/wikipedia/pt/4/46/Grand_Theft_Auto_VI.png">
+           <p><a href="https://www.rockstargames.com/VI">Para mais informações acesse o site oficial da Rockstar Games</a></p>
         </article>
     </main>
 
