--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@ Um analista da Konvoy Ventures prevê que o jogo pode faturar US$ 7,6 bilhões e
            <img src="https://upload.wikimedia.org/wikipedia/pt/4/46/Grand_Theft_Auto_VI.png">
            <p><a href="https://www.rockstargames.com/VI">Para mais informações acesse o site oficial da Rockstar Games</a></p>
         </article>
+        <article>
+            <h5> TRAILLER OFICIAL</h5>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/IpSDW3Mq-7E?si=3uX-RLl2HdzozFvo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </article>
     </main>
 
     
