--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <header>
             <h1>GTA VI</h1>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Rockstar_Games_Logo.svg" id="Rockstar">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Rockstar_Games_Logo.svg" id="Rockstar" alt="RockstarbGames Logo">
         </header>
         <article>
             <h2>O que é?</h2>
@@ -18,7 +18,7 @@
         </article>
         <article>
             <h2>Enredo e Protagonistas</h2>
-            <p> GTA 6 segue a história de Lucia <img src="https://rollingstone.com.br/media/uploads/2025/05/alem-de-lucia-e-jason-saiba-quem-sao-os-novos-personagens-de-gta-6-2.jpg"> e Jason <img src="https://rollingstone.com.br/media/uploads/2025/05/alem-de-lucia-e-jason-saiba-quem-sao-os-novos-personagens-de-gta-6.jpg">, dois criminosos que se envolvem em uma conspiração que se estende por todo o estado de Leonida.
+            <p> GTA 6 segue a história de Lucia <img src="https://rollingstone.com.br/media/uploads/2025/05/alem-de-lucia-e-jason-saiba-quem-sao-os-novos-personagens-de-gta-6-2.jpg" alt="Lucia"> e Jason <img src="https://rollingstone.com.br/media/uploads/2025/05/alem-de-lucia-e-jason-saiba-quem-sao-os-novos-personagens-de-gta-6.jpg" alt="Jason">, dois criminosos que se envolvem em uma conspiração que se estende por todo o estado de Leonida.
 A dupla, tendo tudo contra eles, precisa confiar um no outro para sobreviver e sair dessa situação.
 A narrativa parece inspirada no casal Bonnie & Clyde, com foco em roubos e crimes. 
 </p>
@@ -30,7 +30,7 @@ A narrativa parece inspirada no casal Bonnie & Clyde, com foco em roubos e crime
             <p>O jogo se passa no estado de Leonida, uma versão fictícia da Flórida, com destaque para Vice City, uma cidade icônica da franquia. 
 A ambientação remete ao mundo moderno, com referências à cultura pop e redes sociais, como o Instagram e o TikTok. 
 Haverá uma variedade de tipos de corpos e personagens, com foco no realismo e na diversidade, segundo a Forbes. </p>
-            <img src="https://cdn.ome.lt/uH4nWKJ7CLYJaQQXIZ-Tx_fts58=/770x0/smart/uploads/conteudo/fotos/gta-vi-paisagem.png">
+            <img src="https://cdn.ome.lt/uH4nWKJ7CLYJaQQXIZ-Tx_fts58=/770x0/smart/uploads/conteudo/fotos/gta-vi-paisagem.png" alt="Cenario principal">
         </article>
         <article>
             <h4>Lançamento</h4>
@@ -38,12 +38,13 @@ Haverá uma variedade de tipos de corpos e personagens, com foco no realismo e n
 A Rockstar Games justifica o adiamento para garantir a qualidade e a experiência que os jogadores esperam. 
 Há grande expectativa em torno do jogo, com previsões de que seja um dos maiores lançamentos da história dos videogames. 
 Um analista da Konvoy Ventures prevê que o jogo pode faturar US$ 7,6 bilhões em apenas dois meses após o lançamento, segundo a Adrenaline. </p>
-           <img src="https://upload.wikimedia.org/wikipedia/pt/4/46/Grand_Theft_Auto_VI.png">
-           <p><a href="https://www.rockstargames.com/VI">Para mais informações acesse o site oficial da Rockstar Games</a></p>
+           <img src="https://upload.wikimedia.org/wikipedia/pt/4/46/Grand_Theft_Auto_VI.png" alt="Poster com data de Lançamento">
         </article>
         <article>
             <h5> TRAILLER OFICIAL</h5>
-            <iframe width="500" height="315" src="https://www.youtube.com/embed/IpSDW3Mq-7E?si=3uX-RLl2HdzozFvo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="500 " height="315" src="https://www.youtube.com/embed/IpSDW3Mq-7E?si=3uX-RLl2HdzozFvo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+             <p><a href="https://www.rockstargames.com/VI">Para mais informações acesse o site oficial da Rockstar Games</a></p>
         </article>
     </main>
 
